--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -1,3 +1,32 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  header {
+    @apply sticky top-0 bg-brand-green p-4 flex flex-col md:flex-row justify-between;
+  }
+
+  footer {
+    @apply bg-brand-green p-4;
+  }
+
+  main {
+    @apply m-4;
+  }
+
+  h1 {
+    @apply text-4xl font-bold text-white;
+  }
+
+  td {
+    @apply p-2
+  }
+}
+/* tbody {
+  @apply 
+} */
+
+
+
+
