--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -19,10 +19,14 @@
   }
 
   h1 {
-    @apply text-4xl font-bold text-white;
+    @apply text-2xl font-bold text-brand-green;
+  }
+
+  th {
+    @apply p-2 border-b-2 border-solid border-brand-green bg-brand-green text-left text-white;
   }
 
   td {
-    @apply p-2;
+    @apply p-2 border-b-2 border-solid border-brand-lightgreen;
   }
 }
